# RandiCheck

./: .gitignore  Cargo.toml  makefile
convert_back/: convert_haskell.rs
input_files/: arithmetic.hs  bezout.hs  bst.hs  example.hs  where.hs
src/: adt.rs  bench.sh  lib.rs  main.rs  qc.cabal
src/app/: Main.hs
src/generate/: codegen.rs  essence.rs  generate.rs  mod.rs  oxide_out.rs
src/output/: essence.rs  generate.rs  mod.rs  oxide_out.rs
src/parse/: haskell_parser.rs  idris_parser.rs  mod.rs  parser.rs  parser_utils.rs  rust_parser.rs
src/randomGeneration/: mod.rs  new_haskell.rs
src/random_generation/: new_haskell.rs
src/solve/: mod.rs  solve_conjure.rs
src/templates/: essence.tera  haskell.tera  haskell_in.tera
src/validate/: gen_haskell.rs  mod.rs  parse_solution.rs
tests/: arithmetic.essence  arithmetic.hs  ex.essence  ex.idr  ex.rs  example.hs  range.hs
